# Ronald_Repo

./: README.md
Ronald_Repo/Pepper_Robot_Guide/src/Face_learning/FaceLearning/: FaceLearning.pml  manifest.xml
Ronald_Repo/Pepper_Robot_Guide/src/Matlab/: 04_ObstacleForce.eps  04_PartnerForce.eps  04_PedestrianForce.eps  07_Acceleration.eps  07_AveragePose.eps  07_InitialPose.eps  07_Participant_Smoothness1.eps  07_Participant_Smoothness2.eps  07_PartnerDistance.eps  07_RecordedPose.eps  07_Smoothness.eps  07_Time.eps  Exp_partnerFound_time.m  Exp_partnerPoseLocal_Pattern.m  Exp_robotPose_Smoothness.m  Exp_robotVelocity_Jerk.m  Force_sim.m  Force_sim_noPartner.m  Force_tunning.m  KalmanFilter.m  PartnerForce_tunning.m  SFM_Forces.m  Test_KalmanFilter.m  obsForce.m  parForce.m  pedForce.m
Ronald_Repo/Pepper_Robot_Guide/src/depthimage_to_laserscan/launch/: depth_laser.launch  depth_laser.launch~
Ronald_Repo/Pepper_Robot_Guide/src/nao_dcm_bringup/: package.xml
Ronald_Repo/Pepper_Robot_Guide/src/navigation/base_local_planner/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/clear_costmap_recovery/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/costmap_2d/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/dwa_local_planner/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/move_base/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/move_slow_and_clear/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/navfn/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/pedsim/: CMakeLists.txt
Ronald_Repo/Pepper_Robot_Guide/src/navigation/pose_follower/: CMakeLists.txt  package.xml
Ronald_Repo/Pepper_Robot_Guide/src/pepper_joystick/: CMakeLists.txt  package.xml
Ronald_Repo/Pepper_Robot_Guide/src/pepper_joystick/launch/: pepper_joystick.launch
Ronald_Repo/Pepper_Robot_Guide/src/pepper_joystick/remote_control/: Controller_Final.py  Controller_Final_PS3.py  Controller_UpperBody.py  Controller_WheelDrive.py  DetectEventsControllerOnly.py
Ronald_Repo/Pepper_Robot_Guide/src/pepper_joystick/src/: pepper_joy.py
Ronald_Repo/Pepper_Robot_Guide/src/pepper_navigation/: package.xml
Ronald_Repo/Pepper_Robot_Guide/src/pepper_navigation/Maps/: map0.yaml  map_room3.pgm  map_room3.yaml
Ronald_Repo/Pepper_Robot_Guide/src/pepper_people_detector/: CMakeLists.txt  package.xml
Ronald_Repo/Pepper_Robot_Guide/src/pepper_people_detector/msg/: HeadPose.msg~  PeoplePose.msg  PeoplePoseArray.msg  WordRecognized.msg
Ronald_Repo/Pepper_Robot_Guide/src/pepper_people_detector/src/: event_control.py  gesture_control.py  speech_detection.py
Ronald_Repo/Pepper_Robot_Guide/src/pepper_planner/sfm_local_planner/: CMakeLists.txt  blp_plugin.xml  custom_rosconsole.conf  package.xml
Ronald_Repo/Pepper_Robot_Guide/src/pepper_stage/: CMakeLists.txt  package.xml
Stack_Builders/: pico_placa.py
(+36 files in other folders)
